Add new functions: Edit, Delete;